<resources>
    <string name="app_name" translatable="false">GT Kawasaki</string>

    // Text for create command button
    <string name="change_command">Change command</string>
    <string name="create_command">Create command</string>

    // Move command
    <string name="enter_distance_to_move">Enter the distance to move</string>
    <string name="creating_move_command">Creating the MOVE command</string>
    <string name="change_move_command">Change the MOVE command</string>
    <string name="distance_to_be_moved">The distance to be moved</string>

    // Move to point command
    <string name="select_the_direction_to_move">Select the direction to move</string>
    <string name="select_type_of_movement">Select type of movement</string>
    <string name="choose_point_to_move_to">Choose point to move to</string>
    <string name="moving_to_the_point">Moving to the point</string>
    <string name="change_move_to_point_command">Change the moving to the point</string>
    <string name="create_point_if_you_want_use_move_to_point">
        To use this command, ypu need to create a point</string>

    // For command
    <string name="for_command">FOR</string>
    <string name="creating_for_command">Creating the MOVE command</string>
    <string name="change_for_command">Change the MOVE command</string>

    // Create new point
    <string name="add_new_point">Add new point</string>
    <string name="point_name">Point name</string>
    <string name="add_point">Add point</string>

    //Change pont
    <string name="change_point_header">Changing a point</string>
    <string name="change_point">To change the point</string>

    // Control panel
    <string name="connection">Connection</string>
    <string name="run">Run</string>

    // Create connection
    <string name="ip_address">Ip address</string>
    <string name="port">Port</string>
    <string name="connect_to_the_robot">Connect to the robot</string>
    <string name="connection_to_the_robot">Connection to the robot</string>
    <string name="connection_is_failed">Connection is failed</string>

    // Any
    <string name="do_not_enter_value">You did not enter a value</string>

    // Commands text
    <string name="command_gripper_open">To open the gripper</string>
    <string name="command_gripper_close">To close the gripper</string>
    <string name="command_move">Moving along the axis</string>
    <string name="command_move_value">on</string>
    <string name="command_move_to_point">Moving to a point</string>
    <string name="command_move_to_point_with_coordinate">with coordinates</string>
    <string name="command_move_to_point_type">Type of movement:</string>

    // Position text
    <string name="point_coordinate">Coordinates of the point:</string>

    // Programming and point tab host
    <string name="programming_tab">Programming</string>
    <string name="create_points_tab">Creating points</string>

    // Control fragment
    <string name="moving_xyz_tab">Move by x, y, z</string>
    <string name="moving_dxdydz_tab">Move by dx,dy,dz</string>
    <string name="cancel">Cancel</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="delay">Delay</string>

    // Coordinate type
    <string-array name="coordinateOptions" translatable="false">
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
        <item>DX</item>
        <item>DY</item>
        <item>DZ</item>
    </string-array>

    // Type of movement
    <string-array name="typeOfMovement">
        <item>On axes</item>
        <item>Linearly</item>
    </string-array>
</resources>