<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.controlElements.ControlPanel">

    <data>
        <import type="android.view.View"/>

        <variable
            name="connect_status"
            type="Boolean" />
        
        <variable
            name="is_program_run"
            type="ru.art241111.gt_kawasaki.viewModel.RobotViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:visibility="@{is_program_run.isProgramRun ? View.GONE: View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ll_stop_program"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <ImageButton
                android:id="@+id/ib_run_program"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_baseline_play_arrow_24" />

            <TextView
                android:id="@+id/tv_run"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:text="@string/run"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_stop_program"

            android:visibility="@{is_program_run.isProgramRun ? View.VISIBLE : View.GONE}"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/ib_stop_program"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_baseline_stop_24" />

            <TextView
                android:id="@+id/tv_stop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:text="@string/stop"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:visibility="@{is_program_run.isProgramRun ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/ll_stop_program"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/ib_pause_program"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_baseline_pause_24" />

            <TextView
                android:id="@+id/tv_pause"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:text="@string/stop"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/iv_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@{connect_status ? @drawable/connect_button :@drawable/disconnect_button}"
                android:cropToPadding="true"
                android:src="@{connect_status ? @drawable/ic_baseline_link_24 :@drawable/ic_baseline_link_off_24}" />

            <TextView
                android:id="@+id/tv_connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:text="@string/connection"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/iv_connection" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
